[tool.poetry]
name = "account-service"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Kurnia Dwie <dwie.kurnia@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.1"}
python-dotenv = "^1.0.1"
fastapi-sqlalchemy = "^0.2.1"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
databases = {extras = ["postgresql"], version = "^0.9.0"}
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
